added tictactoe semi functionality

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -16,7 +16,7 @@
     <body>
         <nav class="fixed-nav-bar">
             <a id="home-button" href="/"><img width="6%" hieght="6%" src="{{ url_for('static', filename='imgs/home-icon.png') }}"></a>
-            <a class="nav-bar-mid" id="{{ url_for('static', filename='templates/tictactoe.html'" href="/tictactoe.html"><img width="6%" hieght="6%" src="{{ url_for('static', filename='imgs/tactictoe.png') }}"></a>
+            <a id="tictactoe-button" class="nav-bar-mid" href="/tictactoe"><img width="6%" hieght="6%" src="{{ url_for('static', filename='imgs/tactictoe.png') }}"></a>
         </nav>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <!--[if lt IE 7]>
