--- a/web/static/css/tictac.css
+++ b/web/static/css/tictac.css
@@ -4,3 +4,14 @@
     align-items:center;
     text-align:center;
 }
+
+.tic-button {
+    width: 10%;
+    height: 10%;
+}
+
+#board {
+    align-items: center;
+    margin-top: 10%;
+    margin-left: 10%;
+}
