--- a/web/templates/tictactoe.html
+++ b/web/templates/tictactoe.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/tictac.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
         <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='/imgs/favicon.ico') }}">
         <script src="{{ url_for('static', filename='/js/tictac.js') }}"></script>
     </head>
