--- a/web/templates/tictactoe.html
+++ b/web/templates/tictactoe.html
@@ -13,8 +13,8 @@
     </head>
     <body>
         <nav class="fixed-nav-bar">
-            <a id="home-button" href="/"><img width="6%" hieght="6%" src="{{ url_for('static', filename='imgs/home-icon.png') }}"></a>
-            <a class="nav-bar-mid" id="tictactoe-button" href="/tictactoe"><img width="6%" hieght="6%" src="{{ url_for('static', filename='imgs/tactictoe.png') }}"></a>
+            <a id="home-button" href="/"><img width="5%" hieght="5%" src="{{ url_for('static', filename='imgs/home-icon.png') }}"></a>
+            <a  id="tictactoe-button" href="/tictactoe"><img width="5%" hieght="5%" src="{{ url_for('static', filename='imgs/tactictoe.png') }}"></a>
         </nav>
 
         <div id="board">
