--- a/web/templates/tictactoe.html
+++ b/web/templates/tictactoe.html
@@ -15,6 +15,7 @@
         <nav class="fixed-nav-bar">
             <a id="home-button" href="/"><img width="5%" hieght="5%" src="{{ url_for('static', filename='imgs/home-icon.png') }}"></a>
             <a  id="tictactoe-button" href="/tictactoe"><img width="5%" hieght="5%" src="{{ url_for('static', filename='imgs/tactictoe.png') }}"></a>
+            <a  id="draw-button" href="/draw"><img width="5%" hieght="5%" src="{{ url_for('static', filename='imgs/mspaint.png') }}"></a>
         </nav>
 
         <div id="board">
