--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -1,1 +1,11 @@
-.fixed-nav-bar { position: fixed; top: 0; left: 0; z-index: 9999; width: 100%; height: 100px; background-color: #00a087;}
+.fixed-nav-bar {
+    position: fixed;
+    top: 0;
+    left:0;
+    z-index:9999;
+    width: 100%;
+    height: 100px;
+    background-color: #00a087;
+    padding-bottom: 1%;
+    margin-bottom: 20%;
+}
