--- a/web/templates/draw.html
+++ b/web/templates/draw.html
@@ -17,6 +17,7 @@
             <a id="home-button" href="/"><img width="5%" hieght="5%" src="{{ url_for('static', filename='imgs/home-icon.png') }}"></a>
             <a  id="tictactoe-button" href="/tictactoe"><img width="5%" hieght="5%" src="{{ url_for('static', filename='imgs/tactictoe.png') }}"></a>
             <a  id="draw-button" href="/draw"><img width="5%" hieght="5%" src="{{ url_for('static', filename='imgs/mspaint.png') }}"></a>
+            <a  id="clicker-button" href="/clicker"><img width="5%" hieght="5%" src="{{ url_for('static', filename='imgs/greenbutton.png') }}"></a>
         </nav>
 
         <section class="container">
