--- a/web/static/css/clicker.css
+++ b/web/static/css/clicker.css
@@ -1,6 +1,24 @@
 #click-button {
     position: fixed;
-    top: 50%;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
+	margin-top: auto;
+}
+button {
+	border-radius: 8px;
+	background-color: #5f5f5f; /* Green */
+	border: none;
+	color: white;
+	padding: 10px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+#click-counter {
+	position:fixed;
+	top:20%;
+	left:47%;
+	text-align: center;
+
+}
