--- a/web/templates/snake.html
+++ b/web/templates/snake.html
@@ -7,15 +7,13 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="static/css/index.css">
-        <link rel="stylesheet" href="static/css/multiplayer.css">
+        <link rel="stylesheet" href="static/css/snake.css">
     </head>
     <body>
-        
-        <div id="p1"></div>
 
-        <div id="p2"></div>
+        <div id="head"></div>
 
-        <script src="static/js/multiplayer.js" async defer></script>
+        <script src="static/js/snake.js" async defer></script>
 
     </body>
 </html>
