--- a/web/templates/cod.html
+++ b/web/templates/cod.html
@@ -7,13 +7,14 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="static/css/index.css">
-        <link rel="stylesheet" href="static/css/snake.css">
+        <link rel="stylesheet" href="static/css/cod.css">
     </head>
     <body>
 
-        <div id="head"></div>
-
-        <script src="static/js/snake.js" async defer></script>
+        <textarea id="console"></textarea>
+        <button onclick="runc('console')">Run</button>
+        <div id="output"></div>
+        <script src="static/js/cod.js" async defer></script>
 
     </body>
 </html>
