--- a/web/templates/cookieclicker.html
+++ b/web/templates/cookieclicker.html
@@ -14,7 +14,7 @@
             iframe { flex-grow: 1; border: none; margin: 0; padding: 0; }
         </style>
 
-        <iframe frameborder="0" src="https://rudolph-the-red-nosed-reindeer.ga/tmm-cookieclicker/"></iframe>
+        <iframe frameborder="0" src="https://www-ig-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/sk1bx/Cookie@9e0084916e9f198ed201bf47e93e6b0f2bdca5fe/cc.xml"></iframe>
 
     </body>
 </html>
