--- a/web/templates/cookieclicker.html
+++ b/web/templates/cookieclicker.html
@@ -11,10 +11,19 @@
     <body>
 
         <style>
-            iframe { flex-grow: 1; border: none; margin: 0; padding: 0; }
-        </style>
+            body, html
+            {
+                margin: 0; padding: 0; height: 100%; overflow: hidden;
+            }
 
-        <iframe frameborder="0" src="https://rudolph-the-red-nosed-reindeer.ga/tmm-cookieclicker/"></iframe>
+            #content
+            {
+                position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
+            }
+        </style>
+        <div id="content">
+            <iframe width="100%" height="100%" frameborder="0" src="https://eli-schwartz.github.io/cookieclicker/"></iframe>
+        </div>
 
     </body>
 </html>
